Refactored, added self collision check Diagonals still don't work though

--- a/app/views/static_pages/index.html
+++ b/app/views/static_pages/index.html
@@ -11,14 +11,16 @@
   </main>
   
   <script>
-    var canvas = document.getElementById('game-canvas');
-    var game = new UncleWorm.Game();
-    var gameView = new UncleWorm.GameView(
-      game,
-      canvas.getContext("2d")
-    );
-    
-    gameView.start();
+    $(function () {
+        var canvas = document.getElementById('game-canvas');
+        var game = new UncleWorm.Game();
+        var gameView = new UncleWorm.GameView(
+          game,
+          canvas.getContext("2d")
+        );
+        
+        gameView.start();
+    });
   </script>
 </body>
 </html>
