WIP, testing out text drawing still

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,7 +7,7 @@
          url("ti83_plus.woff") format("woff"),
          url("ti83_plus.ttf") format("truetype"),
          url("ti83_plus.svg#TI-83-Plus") format("svg");
-    font-weight: normal;
+    font-weight: lighter;
     font-style: normal;
 }
 
